--- a/homepage/index.html
+++ b/homepage/index.html
@@ -30,21 +30,34 @@
         <div class="col-md-4">
           <h2>What is FICS?</h2>
           <p>FICS is the Free Internet Chess Server. It is one of the oldest and largest internet chess servers.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Read more &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>What is Lentils?</h2>
           <p>Lentils provides a graphical interface for FICS. Since FICS is text-based, a program is needed to make FICS pretty. This is where Lentils comes in.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Read more &raquo;</a></p>
        </div>
         <div class="col-md-4">
           <h2>Where do I start?</h2>
           <p>Download Lentils and start playing as a guest on FICS. Later you can register for a FICS account, for free!</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Read more &raquo;</a></p>
         </div>
       </div>
 
       <hr>
+
+      <div class="container">
+	      <div class="row">
+		      <div class="col-md-3">&nbsp;</div>
+		      <div class="col-md-6">
+		           <h1>What is FICS?</h1> 
+			   The FICS
+		      </div>
+                <div class="col-md-3"></div>
+	      
+	      </div> 
+      </div>
+
 
       <footer>
         <p>&copy; Company 2014</p>
