--- a/homepage/index.html
+++ b/homepage/index.html
@@ -53,8 +53,18 @@
 	</div>
 
         <div class="col-md-offset-2 col-md-8 padding-bottom-m">
+          <img alt="" class="img-responsive center-block" src="Macbeth_Seek.png">
+	  <p>Seek a match dialog</p>
+	</div>
+
+        <div class="col-md-offset-2 col-md-8 padding-bottom-m">
           <img alt="" class="img-responsive center-block" src="Macbeth_PreMoves.png">
 	  <p>Pre-Moves</p>
+	</div>
+
+        <div class="col-md-offset-2 col-md-8 padding-bottom-m">
+          <img alt="" class="img-responsive center-block" src="Macbeth_Menu.png">
+	  <p>Right-click menu</p>
 	</div>
 
         <div class="col-md-offset-2 col-md-8">
@@ -72,13 +82,17 @@
 
         <div class="col-md-offset-2 col-md-8">
 	  <h2>What is FICS?</h2>
-	  <p>FICS is the venerable free chess server ...</p>
+	  <p class="text-justify"><a href="http://www.freechess.org/" target="_blank">FICS</a> is the acronym for Free Internet Chess Server. Run by volunteers FICS is
+	  completely free. FICS can look back on a long and eventfull past. It started its service as early as 1995. Beside chess FICS
+	  offers a variety of chess variations like Losers, Suicide, several 'wild' variations, Crazyhouse and Bughouse.
+	  If you dont have account register here</p>
         </div>
-      </div>
 
         <div class="col-md-offset-2 col-md-8">
 	  <h2>About Macbeth</h2>
-	  <p>FICS is the venerable free chess server ...</p>
+	  <p class="text-justify">When I bought my MacBook Air I was disappointed that my favourite FICS client Babaschess would not run 
+	  on OSX. Dissatisfied with the look of alternatives to Babaschess, I decided to program my own client, learning Haskell on the way. </p>
+        </div>
       </div>
     </div>
     
