--- a/homepage/index.html
+++ b/homepage/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="nofollow" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Macbeth - A simple FICS client for OSX</title>
 
@@ -29,12 +30,12 @@
     </div>
     <div class="container-fluid text-center">
       <div class="row">
-	<div class="col-md-offset-2 col-md-8">
-          <p class="text-center"><button type="button" class="btn btn-lg btn-primary">Download</button></p>
+	<div class="col-md-offset-2 col-md-8 padding-bottom-m">
+          <p class="text-center"><button type="button" class="btn btn-lg btn-primary">Download now!</button></p>
         </div>
 
         <div class="col-md-offset-2 col-md-8">
-          <h2>Screenshots</h2>
+		<!--          <h2>Screenshots</h2> -->
         </div>
 
         <div class="col-md-offset-2 col-md-8 padding-bottom-m">
@@ -67,7 +68,7 @@
 	  <p>Right-click menu</p>
 	</div>
 
-        <div class="col-md-offset-2 col-md-8">
+<!--        <div class="col-md-offset-2 col-md-8">
           <h2>Features</h2>
           <ul>
 	    <li>Sought List</li>
@@ -79,22 +80,28 @@
 	    <li>Auto-Save Game to PGN</li> 
 	  </ul> 
         </div>
-
+	-->
         <div class="col-md-offset-2 col-md-8">
 	  <h2>What is FICS?</h2>
 	  <p class="text-justify"><a href="http://www.freechess.org/" target="_blank">FICS</a> is the acronym for Free Internet Chess Server. Run by volunteers FICS is
 	  completely free. FICS can look back on a long and eventfull past. It started its service as early as 1995. Beside chess FICS
-	  offers a variety of chess variations like Losers, Suicide, several 'wild' variations, Crazyhouse and Bughouse.
-	  If you dont have account register here</p>
+	  offers a variety of chess variations like Losers, Suicide, several 'wild' variations, Crazyhouse and Bughouse.<br>
+	  If you don't have an account you can always play with a guest login. But I recommend to register and create
+	  an account. FICS will track your rating, you can stay in contact with other players and join tournaments. 
+	  You can register <a href="http://www.freechess.org/Register/index.html" target="_blank">here</a>.</p>
         </div>
 
-        <div class="col-md-offset-2 col-md-8">
+        <div class="col-md-offset-2 col-md-8 padding-bottom-l">
 	  <h2>About Macbeth</h2>
 	  <p class="text-justify">When I bought my MacBook Air I was disappointed that my favourite FICS client Babaschess would not run 
 	  on OSX. Dissatisfied with the look of alternatives to Babaschess, I decided to program my own client, learning Haskell on the way. </p>
         </div>
       </div>
+
+      <footer class="padding-bottom-l"><a href="impressum.html" rel="nofollow">Impressum</a></footer>
     </div>
+
+
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
