--- a/homepage/index.html
+++ b/homepage/index.html
@@ -94,11 +94,18 @@
         <div class="col-md-offset-2 col-md-8 padding-bottom-l">
 	  <h2>About Macbeth</h2>
 	  <p class="text-justify">When I bought my MacBook Air I was disappointed that my favourite FICS client Babaschess would not run 
-	  on OSX. Dissatisfied with the look of alternatives to Babaschess, I decided to program my own client, learning Haskell on the way. </p>
+	  on OSX. So I decided to program my own client, learning Haskell on the way.
+	  <br><br> 
+	  The piece sets are the work of Eric De Mund, licensed under a <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-Share Alike 3.0 Unported License</a>. So check out <a href="http://jinchess.com/">Jin</a> as well.
+	  
+	  </p>
+	  
         </div>
       </div>
 
-      <footer class="padding-bottom-l"><a href="impressum.html" rel="nofollow">Impressum</a></footer>
+      <footer class="padding-bottom-l">
+        <a href="impressum.html" rel="nofollow">Impressum</a>
+      </footer>
     </div>
 
 
