--- a/homepage/index.html
+++ b/homepage/index.html
@@ -31,7 +31,7 @@
     <div class="container-fluid text-center">
       <div class="row">
 	<div class="col-md-offset-2 col-md-8 padding-bottom-m">
-          <p class="text-center"><button type="button" class="btn btn-lg btn-primary">Download now!</button></p>
+		<p class="text-center"><a href="Macbeth.dmg"><button type="button" class="btn btn-lg btn-primary">Download!</button></a></p>
         </div>
 
         <div class="col-md-offset-2 col-md-8">
