--- a/homepage/index.html
+++ b/homepage/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="nofollow" />
+    <meta name="description" content="Macbeth is a simple FICS client for OSX" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Macbeth - A simple FICS client for OSX</title>
 
