--- a/homepage/index.html
+++ b/homepage/index.html
@@ -32,12 +32,11 @@
     <div class="container-fluid text-center">
       <div class="row">
 	<div class="col-md-offset-2 col-md-8 padding-bottom-m text-center">
-          <a href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page top')">
-	    <button type="button" class="btn btn-lg btn-primary">Download!</button></a>
+          <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page top')">Download!</a>
         </div>
 
         <div class="col-md-offset-2 col-md-8">
-		<!--          <h2>Screenshots</h2> -->
+	  <h2>Screenshots</h2>
         </div>
 
         <div class="col-md-offset-2 col-md-8 padding-bottom-m">
@@ -106,7 +105,7 @@
 	  here. Currently Macbeth writes to a log-file there as well.
           <br><br>
 	  If you tried Macbeth and like it, please write me an email! If you don't like it or your favourite feature
-	  is missing or you encountered a bug, please write me as well! <<a href="mailto:tilmann@macbeth-ficsclient.com">tilmann@macbeth-ficsclient.com</a>>
+	  is missing or you encountered a bug, please write me as well! &lt;<a href="mailto:tilmann@macbeth-ficsclient.com">tilmann@macbeth-ficsclient.com</a>&gt;
 	  <br><br>
 	  I am indebted to Eric de Mund. He is so kind to offer chess piece sets in perfect quality under Creative Commons.
 	  I rejoiced when I found them! So, the piece sets are the work of Eric De Mund, licensed under a <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-Share Alike 3.0 Unported License</a>.
@@ -114,10 +113,8 @@
 	  </p>
 	  
         </div>
-	<div class="col-md-offset-2 col-md-8 padding-bottom-m">
-		<p class="text-center"><a href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page bottom'">
-			<button type="button" class="btn btn-lg btn-primary">Download!</button></a>
-		</p>
+	<div class="col-md-offset-2 col-md-8 padding-bottom-m text-center">
+	  <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page bottom'">btn btn-lg btn-primary</a>
         </div>
 
       </div>
