--- a/homepage/index.html
+++ b/homepage/index.html
@@ -32,7 +32,7 @@
     <div class="container-fluid text-center">
       <div class="row">
 	<div class="col-md-offset-2 col-md-8 padding-bottom-m text-center">
-          <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page top')">Download!</a>
+          <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page top'); alert('foo');">Download!</a>
         </div>
 
         <div class="col-md-offset-2 col-md-8">
@@ -114,7 +114,7 @@
 	  
         </div>
 	<div class="col-md-offset-2 col-md-8 padding-bottom-m text-center">
-	  <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page bottom'">btn btn-lg btn-primary</a>
+	  <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page bottom')">Download!</a>
         </div>
 
       </div>
