--- a/homepage/impressum.html
+++ b/homepage/impressum.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Macbeth - A simple FICS client for OSX</title>
+    <title>Macbeth - A beautiful FICS client for Mac OS X</title>
 
     <!-- Bootstrap -->
     <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
       <div class="container">
 	<div class="col-md-offset-2 col-md-8 text-center">
           <h1>Macbeth</h1>
-          <p>A simple FICS client for OSX</p>
+          <p>A beautiful FICS client for Mac OS X</p>
 	</div>
       </div>
     </div>
