--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="nofollow" />
     <meta name="description" content="Macbeth is a simple FICS client for OSX" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Macbeth - A simple FICS client for OSX</title>
+    <title>Macbeth - A beautiful FICS client for Mac OS X</title>
 
     <!-- Bootstrap -->
     <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
       <div class="container">
 	<div class="col-md-offset-2 col-md-8 text-center">
           <h1>Macbeth</h1>
-          <p>A simple FICS client for OSX</p>
+          <p>A beautiful FICS client for Mac OS X</p>
 	</div>
       </div>
     </div>
@@ -67,6 +67,11 @@
         <div class="col-md-offset-2 col-md-8 padding-bottom-m">
           <img alt="" class="img-responsive center-block" src="Macbeth_Menu.png">
 	  <p>Right-click menu</p>
+	</div>
+
+        <div class="col-md-offset-2 col-md-8 padding-bottom-m">
+          <img alt="" class="img-responsive center-block" src="crazyhouse.png">
+	  <p>Watching a game of Crazyhouse</p>
 	</div>
 
 <!--        <div class="col-md-offset-2 col-md-8">
