FICS comparison list

--- a/homepage/FICS Interface comparison.html
+++ b/homepage/FICS Interface comparison.html
@@ -59,6 +59,7 @@
     <td><small>Yes</small></td>
     <td><small>Yes</small></td>
     <td><small>Yes</small></td>
+    <td><small>No</small></td>
    </tr>
    <tr bgcolor="#F3F3F3">
     <td><small>Autosave Game</small></td>
@@ -73,6 +74,7 @@
     <td><small>Yes</small></td>
     <td><small>Yes</small></td>
     <td><small>?</small></td>
+    <td><small>Yes</small></td>
    </tr>
    <tr>
     <td><small>Premove</small></td>
@@ -87,6 +89,7 @@
     <td><small>Yes </small></td>
     <td><small>Yes </small></td>
     <td><small>No</small></td>
+    <td><small>Yes</small></td>
    </tr>
    <tr bgcolor="#F3F3F3">
     <td><small>Smart Move</small></td>
@@ -101,6 +104,7 @@
     <td><small>No </small></td>
     <td><small>No </small></td>
     <td><small>No </small></td>
+    <td><small>No</small></td>
    </tr>
    <tr>
     <td><small>Sought Graph</small></td>
@@ -115,6 +119,7 @@
     <td><small>No </small></td>
     <td><small>Yes</small></td>
     <td><small>?</small></td>
+    <td><small>No</small></td>
    </tr>
    <tr bgcolor="#F3F3F3">
     <td><small>Multiple Boards</small></td>
@@ -129,6 +134,7 @@
     <td><small>No </small></td>
     <td><small>Yes </small></td>
     <td><small>No </small></td>
+    <td><small>No</small></td>
    </tr>
    <tr>
     <td><small>Piece Sets</small></td>
@@ -143,6 +149,7 @@
     <td><small>1</small></td>
     <td><small>41</small></td>
     <td><small>5</small></td>
+    <td><small>3</small></td>
    </tr>
    <tr bgcolor="#F3F3F3">
     <td><small>Custom Events</small></td>
@@ -155,6 +162,7 @@
     <td><small>54</small></td>
     <td><small>?</small></td>
     <td><small>16</small></td>
+    <td><small>No</small></td>
     <td><small>No</small></td>
     <td><small>No</small></td>
    </tr>
@@ -171,6 +179,7 @@
     <td><small>No </small></td>
     <td><small>Yes </small></td>
     <td><small>No </small></td>
+    <td><small>No </small></td>
    </tr>
    <tr bgcolor="#F3F3F3">
     <td><small>Custom Right Click</small></td>
@@ -183,6 +192,7 @@
     <td><small>Yes </small></td>
     <td><small>?</small></td>
     <td><small>Yes </small></td>
+    <td><small>No</small></td>
     <td><small>No</small></td>
     <td><small>No</small></td>
    </tr>
@@ -200,6 +210,7 @@
     <td valign="top"><small>Windows,&nbsp;Linux</small></td>
     <td valign="top"><small>Windows</small></td>
     <td valign="top"><small>Android</small></td>
+    <td valign="top"><small>OS&nbsp;X</small></td>
    </tr>
    <tr bgcolor="#F3F3F3">
     <td><small>Current Version</small></td>
@@ -214,6 +225,7 @@
     <td><small>4.7.1</small></td>
     <td><small>5.0</small></td>
     <td><small>4.3.2</small></td>
+    <td><small>1.0</small></td>
    </tr>
    <tr>
     <td><small>Homepage</small></td>
@@ -228,6 +240,7 @@
     <td><small><a href="http://www.gnu.org/software/xboard/" target="_blank">Winboard/ XBoard</a></small></td>
     <td><small><a href="http://www.ideabuilders.com/public/" target="_blank">iNemesis</a></small></td>
     <td><small><a href="http://www.mobialia.com/apps/chess/" target="_blank">Mobialia</a></small></td>
+    <td><small><a href="http://www.macbeth-ficsclient.com" target="_blank">Macbeth-ficsclient.com</a></small></td>
    </tr>
    <tr bgcolor="#F3F3F3">
     <td><small>Active Development</small></td>
@@ -239,6 +252,7 @@
     <td><small>No</small></td>
     <td><small>Yes</small></td>
     <td><small>No</small></td>
+    <td><small>Yes</small></td>
     <td><small>Yes</small></td>
     <td><small>Yes</small></td>
     <td><small>Yes</small></td>
@@ -256,6 +270,7 @@
     <td><small>Yes</small></td>
     <td><small>No</small></td>
     <td><small>No</small></td>
+    <td><small>No</small></td>
    </tr>
    <tr bgcolor="#F3F3F3">
     <td><small>Price</small></td>
@@ -270,6 +285,7 @@
     <td><small>Freeware</small></td>
     <td><small>Freeware</small></td>
     <td><small>Free/Pay</small></td>
+    <td><small>Freeware</small></td>
    </tr>
   </tbody></table>
 
@@ -297,11 +313,12 @@ playing bughouse (a team chess variant) and other wild variants on FICS.
  Very good for running chess engines on computer accounts</li>
    <li><a href="http://www.ideabuilders.com/public/" target="_blank">iNemisis</a>: A colorful interfaces with a lot of themes and configuration options. Speech output.</li>
 <li><a href="http://www.mobialia.com/apps/chess/" target="_blank">Mobialia chess</a>: A feature rich mobile client for Android devices.</li>
+<li><a href="http://www.macbeth-ficsclient.com" target="_blank">Macbeth</a>: A beautiful FICS client for Mac OS X.</li>
 
 
   </ul>
   <hr>
-  Last updated: September 9, 2013
+  Last updated: January 22, 2016
  </font>
 
 </body></html>
