--- a/homepage/index.html
+++ b/homepage/index.html
@@ -119,7 +119,7 @@
 	  
         </div>
 	<div class="col-md-offset-2 col-md-8 padding-bottom-m text-center">
-	  <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page bottom')">Download</a>
+	  <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page bottom');">Download</a>
         </div>
 
       </div>
