--- a/homepage/index.html
+++ b/homepage/index.html
@@ -31,7 +31,13 @@
     </div>
     <div class="container-fluid text-center">
       <div class="row">
-	<div class="col-md-offset-2 col-md-8 padding-bottom-m text-center">
+        <div class="col-md-offset-2 col-md-8 padding-bottom-l">
+          Macbeth is a small and beautiful FICS client for OSX. It supports almost all FICS game types like Suicide,
+          Losers, Wild and Crazyhouse and saves your games automatically. It is open source, you can find the source code
+          here on <a target="_blank" href="https://www.github.com/tgass/macbeth">github</a>. 
+        </div>
+
+        <div class="col-md-offset-2 col-md-8 padding-bottom-m text-center">
           <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page top');">Download</a>
         </div>
 
@@ -98,19 +104,21 @@
         </div>
 
         <div class="col-md-offset-2 col-md-8 padding-bottom-l">
-	  <h2>About Macbeth</h2>
+	  <h2>About</h2>
 	  <p class="text-justify">When I bought my MacBook Air I was disappointed that my favourite FICS client 
 	  <a href="http://www.babaschess.net/" target="_blank">Babaschess</a> would not run on OSX. So I decided to program my own 
 	  client, learning Haskell on the way.
 	  <br><br>
 	  Macbeth is still a work in progress! A lot of functionality FICS offers is not (yet) implemented, ie. playing
-	  Bughouse/Crazyhouse, chatting with your oponent, but Macbeth will store your games automatically!
+	  Bughouse, chatting with your oponent, but Macbeth will store your games automatically!
 	  <br><br>
 	  Macbeth will create a folder in your home directory: ~/Macbeth. All your games will be automatically stored 
 	  here. Currently Macbeth writes to a log-file there as well.
           <br><br>
 	  If you tried Macbeth and like it, please write me an email! If you don't like it or your favourite feature
 	  is missing or you encountered a bug, please write me as well! &lt;<a href="mailto:tilmann@macbeth-ficsclient.com">tilmann@macbeth-ficsclient.com</a>&gt;
+          <br><br>
+          You can find the code on <a target="_blank" href="https://www.github.com/tgass/macbeth">github</a>.
 	  <br><br>
 	  I am indebted to Eric de Mund. He is so kind to offer chess piece sets in perfect quality under Creative Commons.
 	  I rejoiced when I found them! So, the piece sets are the work of Eric De Mund, licensed under a <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-Share Alike 3.0 Unported License</a>.
