--- a/homepage/index.html
+++ b/homepage/index.html
@@ -32,7 +32,7 @@
     <div class="container-fluid text-center">
       <div class="row">
         <div class="col-md-offset-2 col-md-8 padding-bottom-l">
-          Macbeth is a small and beautiful FICS client for OSX. It supports almost all FICS game types like Suicide,
+          Macbeth is a beautiful and minimalistic FICS client for OSX. It supports almost all FICS game types like Suicide,
           Losers, Wild and Crazyhouse and saves your games automatically. It is open source, you can find the source code
           here on <a target="_blank" href="https://www.github.com/tgass/macbeth">github</a>. 
         </div>
