--- a/homepage/index.html
+++ b/homepage/index.html
@@ -38,7 +38,8 @@
         </div>
 
         <div class="col-md-offset-2 col-md-8 padding-bottom-m text-center">
-          <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page top');">Download</a>
+          <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page top');">
+            Download</a><br><span class="font-xs">v0.0.10</span>
         </div>
 
         <div class="col-md-offset-2 col-md-8">
@@ -127,7 +128,8 @@
 	  
         </div>
 	<div class="col-md-offset-2 col-md-8 padding-bottom-m text-center">
-	  <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page bottom');">Download</a>
+          <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page bottom');">Download</a><br>
+          <span class="font-xs">v0.0.10</span>
         </div>
 
       </div>
