--- a/homepage/index.html
+++ b/homepage/index.html
@@ -39,7 +39,8 @@
 
         <div class="col-md-offset-2 col-md-8 padding-bottom-m text-center">
           <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page top');">
-            Download</a><br><span class="font-xs">v0.0.14</span>
+            Download</a><br><span class="font-xs">v0.0.15</span><br><br>
+          If you are upgrading, please go to File -&gt; Settings and 'Reset sounds'.
         </div>
 
         <div class="col-md-offset-2 col-md-8">
@@ -129,7 +130,7 @@
         </div>
 	<div class="col-md-offset-2 col-md-8 padding-bottom-m text-center">
           <a class="btn btn-lg btn-primary" href="Macbeth.dmg" onclick="ga('send', 'event', 'Downloads', 'Macbeth.dmg', 'page bottom');">Download</a><br>
-          <span class="font-xs">v0.0.14</span>
+          <span class="font-xs">v0.0.15</span>
         </div>
 
       </div>
